Include homebrew vars

--- a/roles/base_install/tasks/base_install.yml
+++ b/roles/base_install/tasks/base_install.yml
@@ -1,6 +1,10 @@
 ---
 # tasks file for mac-setup
 
+- name: Include Homebrew variables
+  include_vars:
+    dir: vars/base_install
+
 - name: Install homebrew packages
   homebrew:
     name: "{{ item.name }}"
