--- a/roles/base_install/tasks/base_install.yml
+++ b/roles/base_install/tasks/base_install.yml
@@ -7,7 +7,7 @@
 
 - name: Install homebrew packages
   homebrew:
-    name: "{{ item.name }}"
+    name: "{{ item }}"
     install_options: "{{ item.install_options | default('') }}"
     state: present
     update_homebrew: no
@@ -18,7 +18,7 @@
 
 - name: Update existing homebrew packages
   homebrew:
-    name: "{{ item.name }}"
+    name: "{{ item }}"
     install_options: "{{ item.install_options | default('') }}"
     state: latest
     update_homebrew: yes
@@ -29,7 +29,7 @@
 
 - name: Install homebrew casks
   homebrew_cask:
-    name: "{{ item.name }}"
+    name: "{{ item }}"
     install_options: "{{ item.install_options | default('') }}"
     state: present
     update_homebrew: no
@@ -40,7 +40,7 @@
 
 - name: Update existing homebrew casks
   homebrew_cask:
-    name: "{{ item.name }}"
+    name: "{{ item }}"
     install_options: "{{ item.install_options | default('') }}"
     state: upgraded
     update_homebrew: yes
