--- a/roles/base_install/tasks/image_pull.yml
+++ b/roles/base_install/tasks/image_pull.yml
@@ -24,16 +24,14 @@
     - docker
 
 - name: Ensure vagrant boxes are available
-  cmd:
-    name: "vagrant box add {{ item }}"
+  command: "vagrant box add {{ item }}"
   with_items: "{{ vagrant_images }}"
   tags:
     - install
     - vagrant
 
 - name: Update vagrant boxes to latest version
-  cmd:
-    name: "vagrant box update {{ item }}"
+  command: "vagrant box update {{ item }}"
   with_items: "{{ vagrant_images }}"
   tags:
     - install
