--- a/roles/base_install/tasks/image_pull.yml
+++ b/roles/base_install/tasks/image_pull.yml
@@ -6,32 +6,23 @@
     dir: vars/image_pull
 
 - name: Ensure docker images are available
-  docker:
+  docker_image:
     name: "{{ item }}"
-    pull: missing
+    pull: yes
   with_items: "{{ docker_images }}"
   tags:
     - install
     - docker
 
-- name: Update docker images to latest version
-  docker:
-    name: "{{ item }}"
-    pull: always
-  with_items: "{{ docker_images }}"
-  tags:
-    - update
-    - docker
-
 - name: Ensure vagrant boxes are available
-  command: "vagrant box add {{ item }}"
+  command: vagrant box add "{{ item }}"
   with_items: "{{ vagrant_images }}"
   tags:
     - install
     - vagrant
 
 - name: Update vagrant boxes to latest version
-  command: "vagrant box update {{ item }}"
+  command: vagrant box update "{{ item }}"
   with_items: "{{ vagrant_images }}"
   tags:
     - install
