--- a/roles/base_install/tasks/image_pull.yml
+++ b/roles/base_install/tasks/image_pull.yml
@@ -15,15 +15,10 @@
     - docker
 
 - name: Ensure vagrant boxes are available
-  command: vagrant box add "{{ item }}"
-  with_items: "{{ vagrant_images }}"
-  tags:
-    - install
-    - vagrant
-
-- name: Update vagrant boxes to latest version
-  command: vagrant box update "{{ item }}"
-  with_items: "{{ vagrant_images }}"
+  command: "vagrant box add {{ item }} --provider virtualbox"
+  with_items: "{{ vagrant_boxes }}"
+  environment:
+    VAGRANT_DETECTED_OS: Darwin
   tags:
     - install
     - vagrant
