--- a/roles/base_install/tasks/image_pull.yml
+++ b/roles/base_install/tasks/image_pull.yml
@@ -14,11 +14,19 @@
     - install
     - docker
 
-- name: Ensure vagrant boxes are available
-  command: "vagrant box add {{ item }} --provider virtualbox"
+- name: Check if Vagrant boxes exist
+  shell: vagrant box list | grep "{{ item }}" | cat
+  register: existing_vagrant_boxes
   with_items: "{{ vagrant_boxes }}"
+  ignore_errors: yes
+  changed_when: False
+
+- name: Ensure vagrant boxes are available
+  command: "vagrant box add {{ item.item }} --provider virtualbox"
+  with_items: "{{ existing_vagrant_boxes }}"
   environment:
     VAGRANT_DETECTED_OS: Darwin
+  when: not item.stdout
   tags:
     - install
     - vagrant
