--- a/roles/base_install/tasks/image_pull.yml
+++ b/roles/base_install/tasks/image_pull.yml
@@ -22,7 +22,7 @@
 
 - name: Ensure vagrant boxes are available
   command: "vagrant box add {{ item.item }} --provider virtualbox"
-  with_items: "{{ existing_vagrant_boxes }}"
+  with_items: "{{ existing_vagrant_boxes.results }}"
   environment:
     VAGRANT_DETECTED_OS: Darwin
   when: not item.stdout
