Add Microsoft Office managed by homebrew

--- a/roles/base_install/vars/base_install/brew_casks.yml
+++ b/roles/base_install/vars/base_install/brew_casks.yml
@@ -10,6 +10,7 @@ brew_casks:
   - google-backup-and-sync
   - google-chrome
   - iterm2
+  - microsoft-office
   - postman
   - powershell
   - scroll-reverser
