Add pip and brew pkgs to be managed by role

--- a/roles/base_install/vars/base_install/brew_pkgs.yml
+++ b/roles/base_install/vars/base_install/brew_pkgs.yml
@@ -1,9 +1,11 @@
 brew_pkgs:
   - ansible
   - awscli
+  - cfssl
   - go
   - heroku
   - iperf
+  - kubernetes-cli
   - python3
   - terraform
   - tree
