Cleanup Homebrew casks after installation

--- a/roles/base_install/tasks/base_install.yml
+++ b/roles/base_install/tasks/base_install.yml
@@ -54,6 +54,11 @@
   tags:
     - cleanup
 
+- name: Cleanup homebrew cask
+  command: "brew cask cleanup"
+  tags:
+    - cleanup
+
 - name: Install pip packages
   pip:
     name: "{{ item }}"
