--- a/roles/base_install/vars/base_install/brew_casks.yml
+++ b/roles/base_install/vars/base_install/brew_casks.yml
@@ -1,22 +1,31 @@
 brew_casks:
-  - atom
+  - android-messages
+  - dash
+  - discord
   - docker
+  - drawio
+  - dropbox
   - firefox
+  - flutter
   - google-chrome
+  - google-drive
   - iterm2
+  - logitech-gaming-software
   - microsoft-office
+  - microsoft-teams
+  - philips-hue-sync
+  - pop
   - postman
   - powershell
   - scroll-reverser
-  - shiftit
   - slack
   - spotify
+  - steam
   - sublime-text
   - the-unarchiver
   - vagrant
   - virtualbox
-  - visual-studio-code
-  - dropbox
   - virtualbox-extension-pack
+  - visual-studio-code
   - vlc
-  - homebrew/cask-drivers/logitech-gaming-software
+  - zoom
