Add more brew pkgs to install

--- a/roles/base_install/vars/base_install/brew_pkgs.yml
+++ b/roles/base_install/vars/base_install/brew_pkgs.yml
@@ -1,10 +1,19 @@
 brew_pkgs:
   - ansible
+  - ansible-lint
   - awscli
   - cfssl
+  - exercism
   - go
+  - golangci-lint
   - iperf
+  - jq
+  - node
   - python3
+  - serverless
+  - speedtest-cli
   - terraform
   - tree
-  - wget  
+  - typescript
+  - wget
+  - yarn
