The mas module uses the 'id' param as opposed to 'name'

--- a/roles/base_install/tasks/base_install.yml
+++ b/roles/base_install/tasks/base_install.yml
@@ -65,7 +65,7 @@
 
 - name: Install Mac App Store Apps
   mas:
-    name: "{{ item }}"
+    id: "{{ item }}"
     state: present
   with_items: "{{ mas_apps }}"
   tags:
